# cookiecutter-pipenv

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: LICENSE  Pipfile  README.md  setup.cfg
{{ cookiecutter.repo_name }}/{{ cookiecutter.name }}/: __init__.py  hello.py
