[metadata]
name = {{ cookiecutter.name }}
version = attr: {{ cookiecutter.name }}.__version__
author = {{ cookiecutter.full_name }}
author_email = {{ cookiecutter.email }}
description = {{ cookiecutter.summary }}
long_description = file: README.md
url = {{ cookiecutter.homepage }}
platforms = all
license = WTFPL
classifiers = Programming Language :: Python :: 3

[options]
packages = find:
